MODON MRE BPDEV/force-app/main/default/objects/Sales_Launch__mdt/Sales_Launch__mdt.object-meta.xml
<CustomObject>
    <label>Sales Launch</label>
    <pluralLabel>Sales Launchs</pluralLabel>
</CustomObject>