MODON MRE BPDEV/force-app/main/default/objects/Sales_Launch__mdt/fields/CampaignName__c.field-meta.xml
<CustomField>
    <fullName>CampaignName__c</fullName>
    <label>CampaignName</label>
    <length>150</length>
    <type>Text</type>
</CustomField>