MODON MRE BPDEV/force-app/main/default/objects/Sales_Launch__mdt/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>EndDate</label>
    <type>Date</type>
</CustomField>