MODON MRE BPDEV/force-app/main/default/objects/Sales_Launch__mdt/fields/EventDate__c.field-meta.xml
<CustomField>
    <fullName>EventDate__c</fullName>
    <label>EventDate</label>
    <type>Date</type>
</CustomField>