MODON MRE BPDEV/force-app/main/default/objects/Sales_Launch__mdt/fields/MaxLeadsAllowed__c.field-meta.xml
<CustomField>
    <fullName>MaxLeadsAllowed__c</fullName>
    <label>MaxLeadsAllowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>